--- a/My banking App/index.html
+++ b/My banking App/index.html
@@ -108,14 +108,19 @@
             <p class="transfer-p">Close Acount</p>
             <form class="form-transfer">
               <div class="transfer-to">
-                <input type="text" class="input-transfer" />
+                <input type="text" class="input-transfer close-account-user" />
                 <p class="p-tranferto">Transfer to</p>
               </div>
               <div class="amount">
-                <input type="text" class="input-transfer" />
+                <input
+                  type="text"
+                  class="input-transfer close-account-amount"
+                />
                 <p class="amount-p">Amount</p>
               </div>
-              <button class="transfer__btn" type="button">&rarr;</button>
+              <button class="transfer__btn close-account-btn" type="button">
+                &rarr;
+              </button>
             </form>
           </div>
         </div>
@@ -149,4 +154,5 @@
     <script src="index.js"></script>
   </body>
 </html>
+
 
