--- a/My banking App/index.html
+++ b/My banking App/index.html
@@ -35,7 +35,7 @@
       <section class="curent-balance container">
         <div class="balance">
           <p class="c-balance">Curent Balance</p>
-          <p class="date">as of 21/03/2025 13:14</p>
+          <p class="date curent-balance-date">as of 21/03/2025 13:14</p>
         </div>
         <div class="total-balance">
           <p class="t-balance">25 952,59$</p>
@@ -109,14 +109,11 @@
             <form class="form-transfer">
               <div class="transfer-to">
                 <input type="text" class="input-transfer close-account-user" />
-                <p class="p-tranferto">Transfer to</p>
+                <p class="p-tranferto">UserName</p>
               </div>
               <div class="amount">
-                <input
-                  type="text"
-                  class="input-transfer close-account-amount"
-                />
-                <p class="amount-p">Amount</p>
+                <input type="text" class="input-transfer close-account-pin" />
+                <p class="amount-p">Pin</p>
               </div>
               <button class="transfer__btn close-account-btn" type="button">
                 &rarr;
@@ -154,5 +151,4 @@
     <script src="index.js"></script>
   </body>
 </html>
-
 
