--- a/My banking App/index.html
+++ b/My banking App/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+     <link rel="stylesheet" href="media.css" />
   </head>
   <body>
     <!-- Top Navigation -->
